src/test/deca/syntax/invalid/arithmetic-divideEqual.synt
arithmetic-divideEqual.deca:12:

